Changes from casual-jca